# macos-setup

./: README.md  script-header  setup.sh  setup_aws.sh  setup_composer.sh  setup_docker.sh  setup_fonts.sh  setup_fork.sh  setup_git.sh  setup_goenv.sh  setup_homebrew.sh  setup_iterm2.sh  setup_macports.sh  setup_macports_php.sh  setup_nvm.sh  setup_phpbrew.sh  setup_pkenv.sh  setup_poetry.sh  setup_pyenv.sh  setup_ssh.sh  setup_sudoers.sh  setup_tfenv.sh  setup_tgenv.sh  setup_zsh.sh  shared_functions.sh  shared_functions_brew.sh  shared_functions_keychain.sh  shared_functions_pyenv.sh  update_version_tgenv.sh
config/brew/: Brewfile
config/fork/: custom-commands.json
config/iterm2/: com.googlecode.iterm2.plist
tools/iterm2-tool/: pyproject.toml
