[tool.poetry]
name = "iterm2-tool"
version = "0.1.0"
description = ""
authors = ["Luc Shelton <lucshelton@gmail.com>"]
readme = "README.md"
packages = [{include = "iterm2_tool"}]

[tool.poetry.dependencies]
python = "^3.11"
iterm2 = "^2.7"
rich = "^13.5.2"
rich-click = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
